fix spacingissue

--- a/theMountainSpoke/css/large.css
+++ b/theMountainSpoke/css/large.css
@@ -2,13 +2,23 @@
     /* Only CSS rules that need to be changed to meet the layout needs from medium to large/wide go in here */
 
     header{
-        width: 57%;
+        font-size: 2em;
     }
+
     nav{
         width: 1400px;
     }
     nav ul li a {
         width: 233px;  /* makes link boxes larger to that they are centered*/
+    }
+    .index{
+        display: flex;
+    }
+    .index > div {
+        text-align: center;
+        width: 50%;
+        padding: 10px;
+        margin: 10px;
     }
     .grid{/*adventure tours*/
         width: 100%;
